       search for both "camel", "case" and "camelcase"
     - use PAUSE names if 00whois.xml is mirrored (patch by martijn)
     - add info like email/homepage and some links to other 
       cpan-related pages for the author (patch by martijn)
     - make an empty search give "No results found", rather than
       an error (noticed by corion)

0.39 Tue Aug 19 08:27:37 BST 2008
     - make a single key from the license text and the license url
       from resources instead of displaying both seperately (patch
       by martijn)
     - sort dependencies
     - narrow down the search results based on educated guesses based
       on the search query (patch by martijn)
     - use Archive::Tar if installed, otherwise external tar 
       (patch by corion)
     - display the installed version of a distribution (patch by
       corion)
     - add an "Install" button, very alpha (patch by corion)
     - make /dist/Some-Distname work and extract redirect and 404
       support into their own methods (patch by jesse)
     - a more CPAN::Mini::Webserver specific banner at startup
       (patch by jesse)  
     - extract the code used to render an item in the distro list 
       and remove redundant filename prefix (patch by jesse)
     - require Parse::CPAN::Packages 2.28 to reduce warnings (patch
       by tokuhirom)
     - take 'use CPAN::Mini::Webserver' out of eval() so the 
       compliation failure is more obvious and doesn't cause issues
       (patch by miyagawa)
     - add links to cpantesters, cpanforum, cpanratings and RT
       (patch by martijn)
     - while showing distribution, split up files into categories
       (patch by martijn)
     - encode images with Base64 and ship the pod test

0.38 Mon Aug 18 09:15:25 BST 2008
     - fix bug which repeated metadata (spotted by claes)
     - remove unnecessary "use Term::ProgressBar::Quiet;"

0.37 Fri Aug 15 09:37:46 CEST 2008
     - show metadata on distribution pages (patch by martijn)